<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="dwnldPro">Download Pro Version at just \ \ $0.99 \ \ to Unlock all features.\n Give it a try, it\'s Worth. </string>
    <string name="warnig">If Notifications are not showing at sometime, Click on the ON Button and re-enable Notification access to Screenfly. If it doesn\'t work please Re-boot your device. Release your breath its just a System Bug. </string>
    <string name="app_name">Screenfly </string>
    <string name="pref_enable_on_lockscreen">Show on LockScreen</string>
    <string name="pref_enable_on_lockscreen_desc">Disable this if you Cannot Disable System Notifications from LockScreen</string>
    <string name="pref_disable_sys_up">Disable System Heads-up</string>
    <string name="pref_disable_sys_up_desc">If you are on Lollipop or Above and there is no Option to turn System Heads-up of, then Enable this.</string>
    <string name="action_pro">GET PRO</string>
    <string name="app_icon_name">Screenfly</string>
    <string name="title_activity_welcome">Screenfly notifications</string>
    <string name="action_settings">Settings</string>
    <string name="reader_btn_open">Open</string>
    <string name="reader_btn_dismiss">Dismiss</string>
    <string name="intro_desc">Tap the button below to enable or disable Screenfly notifications.</string>
    <string name="welcome_btn_toggleservice">Screenfly is OFF</string>
    <string name="intro_warning_miui">Are you using MIUI or a similar ROM? Before you can use this app, you\'ll probably need to give it some slack when it comes to security.\n\( 1. Go to System Settings > All > Apps > Downloaded > Screenfly notifications.\n  2. Toggle the switch that says \'Show popup windows\' (second option).\n  3. At the bottom, go to \'Manage permissions\'.\n  4. Set \'I trust this app\' to on. \)\n\n OR Click on below Button and Directly Enable.  </string>
    <string name="site_ad">Like what you see? Check out my other apps as well:</string>
    <string name="site_ad_link">Visit Screenfly</string>
    <string name="title_activity_app_list">App filter</string>
    <string name="pref_priority_title">Notification priority</string>
    <string name="pref_priority_summary">Filter notifications based on their priority.\nRequires Android 4.1</string>
    <string name="applist_desc">Uncheck an app to mute it. You can also tap and hold on the X button in the Screenfly to mute an app.</string>
    <string name="blocklist_desc">Check an app to keep Screenfly from interfering while you\'re using it. Does not work on some Android 5+ devices.</string>
    <string name="blocked_confirmation">App blocked</string>
    <string name="pref_header_style">Style</string>
    <string name="pref_lock_screen_on">Display on lockscreen</string>
    <string name="pref_lock_screen_on_desc">Display the Screenfly on the lockscreen.</string>
    <string name="too_many_restarts_warning">QuickLyric has trouble reading your music - consider rebooting your device</string>
    <string name="bug_report_request">If the app has been misbehaving lately, tap here to report the problem. You don\'t have to do anything if the app is behaving normally.\n\n</string>
    <string name="pref_overlay_display_time">Display time</string>
    <string name="pref_overlay_time_max">Until I dismiss it</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">Filtering</string>
    <string-array name="priorityLevel">
        <item name="MAX">Critical and urgent (missed calls, directions, emergency alerts)</item>
        <item name="HIGH">Important (communications, important emails)</item>
        <item name="NORMAL">Normal (+notifications from old apps)</item>
        <item name="LOW">Non-important (software updates, junk mail)</item>
        <item name="MIN">Contextual and background info (weather, expired events, suggestions)</item>
    </string-array>
    <string name="pref_overlay_display_time_counter"><xliff:g id="time" example="7">%s</xliff:g> seconds</string>
    <string name="pref_top_margin">Popup position when unlocked</string>
    <string name="pref_turn_screen_on">Turn screen on</string>
    <string name="pref_turn_screen_on_desc">Turn the screen on when you get a notification</string>
    <string name="pref_opacity">Opacity</string>
    <string name="pref_color_selector">Select Theme Color</string>
    <string name="pref_color_selector_desc">Click here to Customize your Theme Color.</string>
    <string name="pref_overlay_style">Theme</string>
    <string name="pref_keep_on_lock_screen">Keep on lockscreen</string>
    <string name="pref_keep_on_lock_screen_desc">Keep notifications on the lockscreen until you dismiss them</string>
    <string name="pref_dismiss_on_swipe">Dismiss on swipe</string>
    <string name="title_activity_noshow_list">Don\'t disturb</string>
    <string name="pref_round_icons">Round icons</string>
    <string name="pref_round_icons_desc">Use L\'s round icons instead of the squared icons from earlier releases</string>
    <string name="pref_use_proximity">Pocket detection</string>
    <string name="pref_use_proximity_desc">Don\'t turn the screen on if the phone is in a pocket or facedown on a table.</string>
    <string name="pref_header_lockscreen">Lock screen</string>
    <string name="pref_block_current_app">Block current app</string>
    <string name="pref_block_current_app_desc">Don\'t display Screenfly for notifications from the current app.\nThis does NOT work in Android 6.0+ due to a system restriction.</string>
    <string name="pref_header_behaviour">Behaviour</string>
    <string name="music_title">Playing: <xliff:g id="track" example="TRACK">%s</xliff:g></string>
    <string name="music_text">By: <xliff:g id="artist" example="ARTIST">%s</xliff:g>\nAlbum: <xliff:g id="album" example="ALBUM">%s</xliff:g></string>
    <string name="music_unknown">Unknown</string>
    <string name="pref_music_popup">Current song popup</string>
    <string name="pref_music_popup_desc">Display song metadata on track change.\nNote: not all music players are supported.</string>
    <string name="intro_warning_both_services">Both the notification listener and the accessibility service is enabled. Please disable one of them.</string>
    <string name="notification_listener_not_found_detour">Select \'Notification Listeners\' and toggle \'Screenfly notifications\'</string>
    <string name="accessibility_not_found_detour"><![CDATA[Go to \'Accessibility\' > \'Screenfly notifications\']]></string>
    <string name="accessibility_toast">Select \'Screenfly notifications\' to toggle the service</string>
    <string name="pref_floating_window">Open as floating window</string>
    <string name="pref_floating_window_desc">Tap the icon to open the notification as a floating window. Experimental feature, works with OmniRom and XHaloFloatingWindow.</string>
    <string name="pendingintent_cancel_exception">App has canceled action</string>
    <string name="pendingintent_null_exception">App didn\'t define any action</string>
    <string name="pref_hide_dismiss_button">Hide dismiss button</string>
    <string name="pref_hide_dismiss_button_desc">Hide the dismiss button from the notifications</string>
    <string name="pref_dismiss_keyguard">Unlock phone</string>
    <string name="pref_compact_mode">Compact mode</string>
    <string name="pref_compact_mode_desc">Only display the first line of the notification.</string>
    <string name="pref_font_size">Font size</string>
    <string name="pref_icon_size">Icon size</string>
    <string name="pref_icon_size_desc">Fine-tune the Icon size in the popups</string>
    <string name="pref_font_size_desc">Fine-tune the Font size in the popups</string>
    <string name="leave_review">Leave review</string>
    <string name="pref_header_other">About</string>
    <string name="color_change">Enable to Set Screenfly to Default Color. ( If you Accidently changed the Color )</string>
    <string-array name="overlayPosition">
        <item name="aboveStatus">Top</item>
        <item name="top">Below status bar</item>
        <item name="center">Center</item>
        <item name="bottom">Bottom</item>
    </string-array>
    <string-array name="overlayStyles">
       
        <item name="l">Lollipop Material Design Light</item>
        <item name="ldark">Lollipop Material Design Dark</item>
        <item name="lblack">Lollipop Material Design Black</item>
        <item name="holo">Plain Light </item>
        <item name="holodark">Plain Dark</item>
        <item name="random">Plain Random Color</item>
        
        <item name="ubuntu">IOS Material Design</item>
        <item name="custom_1">Custom Material Design</item>
      

    </string-array>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="pref_single_view">Show only Single Heads-Up</string>
    <string name="pref_single_view_desc">This will allow only a single pop-up on screen, thus Screenfly will not take your entire screen, rather notifications will come on top of previous one.(In LockScreen Screenfly will display all notifications from middle of your Screen.)</string>
    <string name="pref_only_on_lock_screen">Only on lockscreen</string>
    <string name="pref_only_on_lock_screen_desc">Only display popups on the lockscreen.</string>
    <string name="pref_privacy_on_lockscreen">Privacy on lockscreen</string>
    <string name="pref_privacy_on_lockscreen_desc">Don\'t display message contents on the lockscreen</string>
    <string name="accessibility_desc">Enable this service to allow Screenfly to read your notifications.\n\nDO NOT enable the accessibility service if your device is running Android 4.3 or newer (follow instructions inside the app instead).</string>
    <string name="device_admin_disable_warning">After disabling this service, some features in Screenfly might not work properly.</string>
    <string name="title_activity_device_admin_enabler">Enable device admin</string>
    <string name="pref_device_admin">Turn Screen OFF</string>
    <string name="no_proximity_sensor_error">No proximity sensor detected. Pocket detection will not work. Please DON\'T report this bug.</string>
    <string name="pref_keep_screen_on_forever">Keep screen on</string>
    <string name="pref_keep_screen_on_forever_desc">After turning the screen on, keep it on as long as the Screenfly is visible.</string>
    <string name="action_help">Help!</string>
    <string name="action_test">Test</string>
    <string name="device_admin_enable_title">READ THIS, IT IS IMPORTANT!</string>
    <string name="device_admin_enable_explanation">Enabling this will allow Screenfly to turn off your screen.\n\n<strong>Only turn this on if the screen doesn\'t turn off after displaying popups on the lockscreen.\n\nIf you continue, you will not be able to uninstall Screenfly until you turn this off.</strong></string>
    <string name="device_admin_too_fast">You didn\'t read that, did you?</string>
    <string name="intro_status_on">The service is enabled. Try sending yourself a message.\nIf it doesn\'t work, please reboot your device and try again.\nTap here if you need help</string>
    <string name="pref_show_non_cancelable">Show non-cancelable notifications</string>
    <string name="pref_show_non_cancelable_desc">Show ongoing, non-clearable notifications displayed by background services like Downloads.\nNote: If some notifications refuse to go away, try disabling this.</string>
    <string name="pref_night_mode">Night mode</string>
    <string name="pref_night_mode_desc">Disable Screenfly while you sleep</string>
    <string name="pref_night_mode_start">Night mode start time</string>
    <string name="pref_night_mode_end">Night mode end time</string>
</resources>