<!--
  ~ This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.notifications.screen.ui.WelcomeActivity"
    android:background="@android:color/white">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/ErrorHighlight"
        android:text="@string/intro_warning_miui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/miui_warning"
        android:visibility="gone"/>
    <Button
        android:id="@+id/mng_per"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Button_Colored"
        android:text="Manage Permissions"
        android:singleLine="true"
        android:onClick="mng_per_clk"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        />

    <TextView
        android:text="@string/intro_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/notification_open"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Button_Colored"
        android:text="@string/welcome_btn_toggleservice"
        android:singleLine="true"
        android:onClick="onClick"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        />


<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Button_Borderless"
            android:id="@+id/settings_button"
            android:drawableTop="@drawable/ic_action_settings"
            android:text="@string/action_settings"
            android:onClick="doOpenSettings"
            android:textAlignment="center"
            android:layout_gravity="start"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="#33333333"
            android:visibility="invisible"/>

        <Button
            style="@style/Button_Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/test_button"
            android:drawableTop="@drawable/ic_play"
            android:text="@string/action_test"
            android:onClick="doSendTest"
            android:textAlignment="center"
            android:layout_gravity="start" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="#33333333"
            android:visibility="invisible"/>




    </LinearLayout>
-->

    <TextView
        android:text="@string/intro_status_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SuggestionHighlight"
        android:id="@+id/status"
        android:visibility="gone"
        android:onClick="getHelp"
        android:clickable="true" />

    <TextView
        style="@style/ErrorHighlight"
        android:text="@string/intro_warning_both_services"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bothEnabled" />
<!--
    <TextView
        android:text="@string/dwnldPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >


        <ImageView
            android:id="@+id/proBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/google_play"
            android:onClick="pro"
            />

        <ImageView
            android:id="@+id/gameBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/pop_vortex2"
            android:onClick="game"
            android:layout_marginLeft="40dp"
            android:visibility="gone"

            />


</LinearLayout>

-->

    <TextView
        android:text=" Click the Lolipop if you are Bored ! "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <TextView
        android:text="@string/warnig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Button_Colored_Blue"
        android:text="@string/action_settings"
        android:singleLine="true"
        android:onClick="doOpenSettings"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        android:id="@+id/settings_button"
        />
</LinearLayout>
</ScrollView>